--- a/css/style.less
+++ b/css/style.less
@@ -47,3 +47,23 @@ p.nom-spell {
 .dndDraggingSource {
   display:none;
 }
+#buildEdit {
+  margin-bottom:4em;
+}
+.list-items  {
+  display:block;
+  .itemType {
+    display: inline-block;
+    margin: 0.5em;
+    border: 1px solid black;
+    vertical-align: top;
+    padding: 0.5em;
+  }
+}
+#itemsUi {
+  .list-items {
+    li {
+      cursor:pointer;
+    }
+  }
+}
