--- a/views/directives/itemEditBloc.html
+++ b/views/directives/itemEditBloc.html
@@ -1,4 +1,4 @@
-<div ng-if="item">
+<div ng-model="item" data-drop="true" data-jqyoui-options jqyoui-droppable ng-if="item">
   <div ng-click="openItem(item)">
     <span>{{item.nom}}</span>
   </div>
