update drag and drop

--- a/views/buildEdit.html
+++ b/views/buildEdit.html
@@ -28,7 +28,7 @@
 
   <div id="buildUi" ng-if="$root.ui['build'].bool == 'true'">
     <p>
-      Liste des items
+      items du build
     </p>
     <div class="list-items">
       <item-template class="itemType" data-type="1" build-id="{{build.$id}}" item="build.items.type1[0]" build="build" item-to-show="itemToShow"></item-template>
