--- a/views/directives/statistiques.html
+++ b/views/directives/statistiques.html
@@ -16,7 +16,6 @@
   </div>
 </div>
 
-
 <div id="spells" ng-if="$root.ui['spells'].bool == 'true'">
   <ul id="list-spells">
     <li ng-repeat="spell in spells">
@@ -25,8 +24,10 @@
       </p>
     </li>
   </ul>
-
-  <div class="card">
+  <div class="card" ng-show="spellToShow">
+    <p ng-click="updateSpellToShow(null)">
+      Close
+    </p>
     <p class="nom-spell" ng-bind="spellToShow.nom"></p>
     <p ng-bind="spellToShow.description"></p>
     <ul id="pagination-spells">
