ajout de la page compare

--- a/css/style.less
+++ b/css/style.less
@@ -67,3 +67,21 @@ p.nom-spell {
     }
   }
 }
+
+/* BUILDS CSS */
+#creationFilterUl {
+  list-style:none;
+  li {
+    display:inline-block;
+    margin:0.5em;
+    border:1px solid black;
+    cursor:pointer;
+    padding:0.5em;
+
+    &.active {
+      background-color:#edefed;
+    }
+  }
+
+}
+/* END BUILDS CSS */
