--- a/views/builds.html
+++ b/views/builds.html
@@ -1,19 +1,29 @@
 <!-- LECTURE ONLY LISTE DES BUILDS AUTH REQUIRED -->
-<ul>
-  <li ng-click="createBuild(key)" ng-repeat="(key,perso) in $root.listePersos">
-    {{perso.name}}
-  </li>
-</ul>
-<ul>
-  <li ng-repeat="build in builds | filter:{'type': filterVar}:true">
-     <a href="#/build/{{build.$id}}">{{build.titre}} -- {{build.type}}</a>
-     <a class="button" href="#/build/{{build.$id}}/edit">Modifier</a>
-     <a class="button" ng-click="deleteBuild(build.$id)">Supprimer</a>
-  </li>
-</ul>
+<div id="builds-list">
+  <h2>Créer et ouvrir la page</h2>
+  <ul class="list-persos">
+    <li ng-click="createBuild(key)" ng-repeat="(key,perso) in $root.listePersos">
+      <img src="{{perso.visuel}}" />
+    </li>
+  </ul>
+  <ul>
+    <li ng-repeat="build in builds | filter:{'type': filterVar}">
+       <a href="#/build/{{build.$id}}">{{build.titre}} de type {{$root.listePersos[build.type].name}}</a>
+       <span ng-if="build.dateCrea">
+         crée le {{build.dateCrea || }}
+       </span>
+       <a class="button" href="#/build/{{build.$id}}/edit">Modifier</a>
+       <a class="button" ng-click="deleteBuild(build.$id)">Supprimer</a>
+    </li>
+  </ul>
 
-<ul id="creationFilterUl">
-  <li ng-click="toggleFilter(key, $event)" ng-repeat="(key,perso) in $root.listePersos">
-    {{perso.name}}
-  </li>
-</ul>
+  <ul id="creationFilterUl">
+    <li ng-click="toggleFilter('', $event)">
+      Tous
+    </li>
+    <li ng-click="toggleFilter(key, $event)" ng-repeat="(key,perso) in $root.listePersos">
+      {{perso.name}}
+    </li>
+  </ul>
+
+</div>
