--- a/views/builds.html
+++ b/views/builds.html
@@ -10,13 +10,16 @@
     <li ng-repeat="build in builds | filter:{'type': filterVar}">
        <a href="#/build/{{build.$id}}">{{build.titre}} de type {{$root.listePersos[build.type].name}}</a>
        <span ng-if="build.dateCrea">
-         crée le {{build.dateCrea || }}
+         crée le
+         <span>{{build.dateCrea | amDateFormat:'DD/MM/YYYY à HH:mm'}}</span>
        </span>
        <a class="button" href="#/build/{{build.$id}}/edit">Modifier</a>
        <a class="button" ng-click="deleteBuild(build.$id)">Supprimer</a>
     </li>
   </ul>
-
+  <div ng-if="builds.length == 0">
+    Vous n'avez crée aucun build
+  </div>
   <ul id="creationFilterUl">
     <li ng-click="toggleFilter('', $event)">
       Tous
@@ -25,5 +28,4 @@
       {{perso.name}}
     </li>
   </ul>
-
 </div>
