--- a/views/itemId.html
+++ b/views/itemId.html
@@ -1,4 +1,4 @@
-<back-button back="Retour à la liste des items"></back-button>
+<back-button back="Retour"></back-button>
 <div id="item">
   {{item.nom}}
   <a  href="#/set/{{item.set.id}}">{{item.set.nom}}</a>
