--- a/views/setId.html
+++ b/views/setId.html
@@ -7,38 +7,32 @@
     <a href="/#/item/{{item.type}}/{{item.id}}">{{item.nom}}</a>
   </li>
 </ul>
-<br/>
-Zone de modification
-<div>
-  <label>Nom</label>
-  <input ng-model="set.nom"/>
-</div>
-<!-- FONCTON SETS/ITEMS
-"Ajouter un item" dans un set ->Ouverture modal avec la liste des items non affectés à des sets
-on click  -> ajout de l'item dans le node sets/set/items
-          -> ajout de set dans le node items/type/item
-Fermeture du modal
 
-Ajouter un item tout court : ->Selection de la categories
-                             ->Ajout dans la categorie choisie
+<div class="card" style="width: 20rem;">
 
-
-Supprimer un item -> Supression dans le node items/type/item
-                  -> Si item.set, supprimer l'item dans sets/set/items
-
-Modification d'un item -> Modification dans le node items/type/item
-                       -> Si item.set, modifier le node sets/items/(item.set)
-
-Ajout d'un set -> Ajouter un set dans le node sets/set
-
-Supression d'un set -> Suppression dans le node sets/set
-
-Modification d'un set -> Modification dans le node sets/set
-                      -> Modification dans tous les nodes items/type/item/set
-!-->
-<div ng-repeat="setItem in set.items">
-  <input ng-model="setItem.nom"/>
+  <img class="card-img-top" src="{{set.visuel}}" alt="Card image cap">
+  <div class="card-block">
+    <span class="badge badge-success">{{set.tableTypes.length}}</span> 
+    <h4 class="card-title">{{set.nom}}</h4>
+    <p class="card-text">{{set.description}}</p>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li ng-show="!showItem.bool" ng-click="showItem.bool = true" class="list-group-item">Voir</li>
+    <li ng-show="showItem.bool" ng-click="showItem.bool = false" class="list-group-item">Cacher</li>
+    <li ng-click="getCompatible(set)" class="list-group-item">Calculer C</li>
+  </ul>
+  <div class="card-block">
+    <a href="#" class="card-link">Card link</a>
+    <a href="#" class="card-link">Another link</a>
+  </div>
 </div>
 
-<button ng-click="set.$save()">Sauvegarder</button>
-<a ng-click="removeSet(set)">Supprimer</a>
+<ul ng-show="showItem.bool">
+  <li ng-repeat="setItem in set.items">
+    <a href="/#/item/{{item.type}}/{{item.id}}">{{setItem.nom}}</a>
+  </li>
+</ul>
+
+<ul ng-show="setsResult.bool" class="list-group">
+  <li ng-repeat="setC in resultC | orderBy: 'marge'" class="list-group-item"><span class="badge badge-success">{{setC.marge}}</span>  {{setC.nom}}</li>
+</ul>
