--- a/views/buildEdit.html
+++ b/views/buildEdit.html
@@ -62,6 +62,9 @@
   </div>
 </div>
 
-
+<div id="commentaires">
+  <div ng-include="'views/commentaires.html'">
+  </div>
+</div>
 <div ng-include="'views/uiMenu.html'">
 </div>
